--- a/src/main/res/layout/activity_settings.xml
+++ b/src/main/res/layout/activity_settings.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
+    android:theme="@style/Theme.Echtzeyt"
     tools:context=".SettingsActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -41,18 +42,20 @@
         android:id="@+id/settingsSaveContentSwitch"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginStart="@dimen/settings_switch_margin"
+        android:layout_marginLeft="@dimen/settings_switch_margin"
+        android:layout_marginTop="@dimen/settings_switch_margin"
+        android:layout_marginEnd="@dimen/settings_switch_margin"
+        android:layout_marginRight="@dimen/settings_switch_margin"
         android:text="@string/settingsSaveContent"
         android:textColor="@color/foreground"
-        android:textSize="18sp"
+        android:textSize="@dimen/settings_label_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarSettings"
-        app:switchPadding="10dp"
+        app:switchPadding="@dimen/settings_switch_padding"
+        app:thumbTint="@color/foreground"
+        app:trackTint="@color/backgroundSunken"
         app:useMaterialThemeColors="true"
         tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />
 
@@ -60,18 +63,20 @@
         android:id="@+id/settingsAutoDarkSwitch"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginStart="@dimen/settings_switch_margin"
+        android:layout_marginLeft="@dimen/settings_switch_margin"
+        android:layout_marginTop="@dimen/settings_switch_margin"
+        android:layout_marginEnd="@dimen/settings_switch_margin"
+        android:layout_marginRight="@dimen/settings_switch_margin"
         android:text="@string/settingsAutoDark"
         android:textColor="@color/foreground"
-        android:textSize="18sp"
+        android:textSize="@dimen/settings_label_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/settingsSaveContentSwitch"
-        app:switchPadding="10dp"
+        app:switchPadding="@dimen/settings_switch_padding"
+        app:thumbTint="@color/foreground"
+        app:trackTint="@color/backgroundSunken"
         app:useMaterialThemeColors="true"
         tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />
 
@@ -79,39 +84,64 @@
         android:id="@+id/settingsDarkModeSwitch"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginStart="@dimen/settings_switch_margin"
+        android:layout_marginLeft="@dimen/settings_switch_margin"
+        android:layout_marginTop="@dimen/settings_switch_margin"
+        android:layout_marginEnd="@dimen/settings_switch_margin"
+        android:layout_marginRight="@dimen/settings_switch_margin"
         android:text="@string/settingsDarkMode"
         android:textColor="@color/foreground"
-        android:textSize="18sp"
+        android:textSize="@dimen/settings_label_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/settingsAutoDarkSwitch"
-        app:switchPadding="10dp"
+        app:switchPadding="@dimen/settings_switch_padding"
+        app:thumbTint="@color/foreground"
+        app:trackTint="@color/backgroundSunken"
         app:useMaterialThemeColors="true"
         tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/settingsFastModeSwitch"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:text="@string/settingsFastMode"
-        android:textColor="@color/foreground"
-        android:textSize="18sp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/settings_switch_margin"
+        android:layout_marginLeft="@dimen/settings_switch_margin"
+        android:layout_marginTop="@dimen/settings_switch_margin"
+        android:layout_marginEnd="@dimen/settings_switch_margin"
+        android:layout_marginRight="@dimen/settings_switch_margin"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/settingsDarkModeSwitch"
-        app:switchPadding="10dp"
-        app:useMaterialThemeColors="true"
-        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />
+        app:layout_constraintTop_toBottomOf="@+id/settingsDarkModeSwitch">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/settingsUpdateInterval"
+            android:textColor="@color/foreground"
+            android:textSize="@dimen/settings_label_size" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <com.maddin.echtzeyt.components.LabeledDiscreteSeekBar
+            android:id="@+id/settingsUpdateEverySelect"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            app:labelColor="@color/background"
+            app:thumbPaddingBottom="3dp"
+            app:thumbPaddingLeft="8dp"
+            app:thumbPaddingRight="8dp"
+            app:thumbPaddingTop="3dp"
+            app:thumbRadius="15dp"
+            app:thumbTextSize="14sp"
+            app:thumbTint="@color/foreground"
+            app:trackHeight="6dp"
+            app:trackTint="@color/backgroundSunken" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/layoutBuildApp"
