slight color changes

--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -10,12 +10,12 @@
     <color name="foreground">#8800AE</color>
     <color name="foregroundHint">#8B3D0355</color>
     <color name="foregroundText">#606060</color>
-    <color name="foregroundWidget">@color/background</color>
+    <color name="foregroundWidget">@color/backgroundTint</color>
     <color name="foregroundNotification">#1A1A1A</color>
     <color name="error">#915A5A</color>
-    <color name="errorWidget">#FF765E</color>
+    <color name="errorWidget">#FF8974</color>
     <color name="success">#628E62</color>
-    <color name="successWidget">#97FF69</color>
+    <color name="successWidget">#A8FF82</color>
 
     <color name="transparent">@android:color/transparent</color>
 </resources>
