--- a/src/main/res/layout/widget_echtzeyt.xml
+++ b/src/main/res/layout/widget_echtzeyt.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:gravity="right|end"
             android:singleLine="false"
+            android:textColor="@color/foregroundText"
             android:textSize="@dimen/widget_text_size" />
 
         <RelativeLayout
@@ -49,6 +50,7 @@
                 android:layout_marginEnd="-10000dp"
                 android:layout_marginRight="-10000dp"
                 android:singleLine="false"
+                android:textColor="@color/foregroundText"
                 android:textSize="@dimen/widget_text_size"
                 android:textStyle="bold"
                 tools:ignore="VisualLintBounds" />
@@ -70,6 +72,7 @@
             android:layout_height="wrap_content"
             android:gravity="right|end"
             android:singleLine="false"
+            android:textColor="@color/foregroundText"
             android:textSize="@dimen/widget_text_size" />
 
         <TextView
@@ -78,6 +81,7 @@
             android:layout_height="wrap_content"
             android:gravity="right|end"
             android:singleLine="false"
+            android:textColor="@color/foregroundText"
             android:textSize="@dimen/widget_text_size" />
 
         <TextView
@@ -86,6 +90,7 @@
             android:layout_height="wrap_content"
             android:gravity="right|end"
             android:singleLine="false"
+            android:textColor="@color/foregroundText"
             android:textSize="@dimen/widget_text_size" />
 
     </LinearLayout>
