--- a/src/main/res/values-night/colors.xml
+++ b/src/main/res/values-night/colors.xml
@@ -9,10 +9,11 @@
     <color name="backgroundNotification">#392E25</color>
     <color name="foreground">#D0D0D0</color>
     <color name="foregroundHint">#909090</color>
+    <color name="foregroundText">@color/foreground</color>
     <color name="foregroundWidget">@color/foreground</color>
     <color name="foregroundNotification">#DAC8C8</color>
     <color name="error">#804040</color>
-    <color name="errorWidget">#D57E7E</color>
+    <color name="errorWidget">#DC8787</color>
     <color name="success">#408040</color>
-    <color name="successWidget">#8EDF7B</color>
+    <color name="successWidget">#9AE887</color>
 </resources>
