my stupid ass switched a != with a == such that the search would only update if it was the same as before, but of course it should update whenever it is different than before

--- a/src/main/res/values-night/colors.xml
+++ b/src/main/res/values-night/colors.xml
@@ -13,7 +13,7 @@
     <color name="foregroundWidget">@color/foreground</color>
     <color name="foregroundNotification">#DAC8C8</color>
     <color name="error">#804040</color>
-    <color name="errorWidget">#DC8787</color>
+    <color name="errorWidget">#D57E7E</color>
     <color name="success">#408040</color>
-    <color name="successWidget">#9AE887</color>
+    <color name="successWidget">#8EDF7B</color>
 </resources>
