--- a/src/main/res/drawable/imagebuttonsecond.xml
+++ b/src/main/res/drawable/imagebuttonsecond.xml
@@ -5,15 +5,15 @@
 
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/backgroundButtonHover" />
-            <corners android:radius="@dimen/bigfloating_radius" />
+            <solid android:color="@color/backgroundButtonSecondHover" />
+            <corners android:radius="@dimen/button_radius" />
         </shape>
     </item>
 
     <item>
         <shape>
-            <solid android:color="@color/backgroundTint" />
-            <corners android:radius="@dimen/bigfloating_radius" />
+            <solid android:color="@color/backgroundButtonSecond" />
+            <corners android:radius="@dimen/button_radius" />
         </shape>
     </item>
 </selector>
