--- a/src/main/res/drawable/widget_button.xml
+++ b/src/main/res/drawable/widget_button.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/backgroundHover" />
+            <solid android:color="@color/backgroundButtonHover" />
             <corners android:radius="@dimen/widget_button_radius" />
         </shape>
     </item>
