--- a/src/main/res/values-night/colors.xml
+++ b/src/main/res/values-night/colors.xml
@@ -2,10 +2,13 @@
 <resources>
     <color name="background">#121212</color>
     <color name="backgroundTint">#303030</color>
-    <color name="backgroundHover">#3C3C3C</color>
-    <color name="backgroundClose">#FF7878</color>
+    <color name="backgroundButtonHover">#3C3C3C</color>
+    <color name="backgroundButtonSecond">#3C3C3C</color>
+    <color name="backgroundButtonSecondHover">#424242</color>
+    <color name="backgroundButtonClose">#FF7878</color>
     <color name="backgroundSunken">#363636</color>
     <color name="backgroundWidgetToolbar">#202020</color>
+    <color name="backgroundPullup">#242424</color>
     <color name="backgroundNotification">#392E25</color>
     <color name="foreground">#D0D0D0</color>
     <color name="foregroundHint">#909090</color>
